# Cypher

./: .gitignore  .prettierignore  bun.lockb  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: App.tsx  routeTree.gen.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: cryptography.rs  database.rs  invokable.rs  lib.rs  main.rs  validator.rs
src-tauri/src/cryptography/: encryption.rs  hashing.rs  jwt.rs  mod.rs  vault.rs
src-tauri/src/database/: path.rs  queries.rs  users.rs
src-tauri/src/database/queries/: schema.rs  user.rs
src-tauri/src/invokable/: auth.rs  mod.rs
src/components/custom/Header/: index.tsx
src/components/custom/LoginCard/: LoginForm.tsx  index.tsx
src/components/custom/Navigator/: index.tsx
src/components/custom/SignUpCard/: SignUpForm.tsx  index.tsx
src/components/custom/TanstackDevTools/: index.tsx
src/components/custom/ThemeToggler/: index.tsx
src/components/primitives/: card.tsx
src/components/ui/: card.tsx  input.tsx  sidebar.tsx
src/hooks/: use-auth.ts  use-login.ts  use-session.ts  use-signup.ts  use-theme.ts
src/providers/: Router.tsx  Theme.tsx  ThemeProvider.tsx  index.tsx
src/routes/: __404.tsx  __root.tsx  index.tsx  login.tsx  sign-up.tsx  signup.tsx
src/schema/: login.ts  signup.ts
src/types/: ipc.ts  taurpc.ts  theme.ts
