[package]
name = "cypher"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cypher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
directories = "5.0.1"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
kv = "0.24.0"
regex = "1.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.20", features = ["derive"] }
specta-util = { version = "0.0.7", features = ["export"] }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-rustls"] }
tauri = { version = "2.0.1", features = [] }
tauri-plugin-shell = "2.0.1"
taurpc = "0.3.3"
tokio = { version = "1", features = ["full"] }
typenum = "=1.17.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
